add clipboard, new blog post, style fixes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,10 +8,14 @@
     <!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <script src="/js/jquery-3.4.1.min.js"></script>
+    <script src="/js/clipboard.min.js"></script>
+    <script src="/js/codeselect.js"></script>
 
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
-
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
     {% if site.tags != "" %}
       {% include collecttags.html %}
