--- a/style.scss
+++ b/style.scss
@@ -35,8 +35,8 @@ h1, h2, h3, h4, h5, h6 {
   color: $darkerGray;
   font-weight: bold;
 
-  line-height: 1.7;
-  margin: 1em 0 15px;
+  line-height: 1.5;
+  margin: 0.5em 0 15px;
   padding: 0;
 
   @include mobile {
@@ -110,6 +110,37 @@ img {
   max-width: 100%;
 }
 
+img + em { 
+  font-size: 12px;
+  display: block; 
+  text-align: center;
+}
+
+.snippet {
+  position: relative;
+  overflow: visible
+}
+
+.snippet code {
+  font-size: 14px;
+  line-height: 20px
+}
+
+.snippet .btn {
+  -webkit-transition: opacity .3s ease-in-out;
+  -o-transition: opacity .3s ease-in-out;
+  transition: opacity .3s ease-in-out;
+  opacity: 0;
+  padding: 2px 6px;
+  position: absolute;
+  right: 4px;
+  top: 4px
+}
+
+.snippet:hover .btn,.snippet .btn:focus {
+  opacity: 1
+}
+
 // Fixes images in popup boxes from Google Translate
 .gmnoprint img {
   max-width: none;
@@ -117,6 +148,7 @@ img {
 
 .date {
   font-style: italic;
+  font-size: 14px;
   color: $gray;
 }
 
@@ -151,7 +183,7 @@ img {
 //
 
 .wrapper-masthead {
-  margin-bottom: 50px;
+  margin-bottom: 1em;
 }
 
 .masthead {
@@ -195,15 +227,15 @@ img {
   color: $darkGray;
   cursor: pointer;
   font-family: $helveticaNeue;
-  font-weight: 300;
-  font-size: 28px;
-  letter-spacing: 1px;
+  font-weight: bold;
+  font-size: 36px;
+  letter-spacing: 0px;
 }
 
 .site-description {
-  margin: -5px 0 0 0;
+  margin: -5px 0px 0px 3px;
   color: $gray;
-  font-size: 16px;
+  font-size: 14px;
 
   @include mobile {
     margin: 3px 0;
@@ -241,8 +273,96 @@ nav {
 // .main
 //
 
+.card {
+  width: 250px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-align: center;
+}
+
+.imgpad {
+  padding: 10px;
+}
+
+.post-tag {
+  display: inline-block;
+  background: rgba(106,159,181,0.15);
+  padding: 0 .5rem;
+  margin-right: .2rem;
+  border-radius: 4px;
+  color: #6a9fb5;
+  font-family: "PT Sans",Helvetica,Arial,sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  -webkit-transition: all 0.1s ease-in-out;
+  -moz-transition: all 0.1s ease-in-out;
+  transition: all 0.1s ease-in-out
+}
+
+.post-tag:before {
+  content: "\f02b";
+  font-family: FontAwesome;
+  padding-right: .5em
+}
+
+.post-tag:hover {
+  text-decoration: none;
+  background: #6a9fb5;
+  color: #fff
+}
+
+.tags-expo :target:before {
+  content: "";
+  display: block;
+  height: 72px;
+  margin: -72px 0 0
+}
+
+@media (min-width: 38em) {
+  .tags-expo .tags-expo-list {
+      font-size:0.9rem
+  }
+
+  .tags-expo .tags-expo-list .post-tag {
+      margin: .2em .3em
+  }
+}
+
+.tags-expo .tags-expo-section {
+  font-family: "PT Sans",Helvetica,Arial,sans-serif
+}
+
+.tags-expo .tags-expo-section ul {
+  list-style-type: circle;
+  list-style-position: inside;
+  padding: 0
+}
+
+.tags-expo .tags-expo-section ul li {
+  -webkit-transition: all 0.1s ease-in-out;
+  -moz-transition: all 0.1s ease-in-out;
+  transition: all 0.1s ease-in-out;
+  padding: 0 1rem
+}
+
+.tags-expo .tags-expo-section ul li:hover {
+  list-style-type: disc;
+  padding: 0 .5rem
+}
+
+.tags-expo .tags-expo-section a {
+  text-decoration: none
+}
+
+.tags-expo .tags-expo-section .post-date {
+  display: inline-block;
+  font-size: 80%;
+  color: #9a9a9a;
+  margin: 0;
+  padding: 0
+}
+
 .posts > .post {
-  padding-bottom: 2em;
+  padding-bottom: 1em;
   border-bottom: 1px solid $lightGray;
 }
 
@@ -262,7 +382,7 @@ nav {
   }
 
   .comments {
-    margin-top: 10px;
+    margin-top: 0px;
   }
 
   .read-more {
@@ -272,7 +392,7 @@ nav {
 }
 
 .wrapper-footer {
-  margin-top: 50px;
+  margin-top: 1em;
   border-top: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
   background-color: $lightGray;
@@ -281,6 +401,14 @@ nav {
 footer {
   padding: 20px 0;
   text-align: center;
+}
+
+hr {
+  border: none;
+  height: 1px;
+  /* Set the hr color */
+  color: $lightGray; /* old IE */
+  background-color: $lightGray; /* Modern Browsers */
 }
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
