--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,20 +5,17 @@ layout: default
 <article class="post">
   <h1>{{ page.title }}</h1>
 
+  <div class="date">
+    {% include read_time.html %} - Posted on {{ page.date | date: "%B %e, %Y" }} in 
+    {% for tag in page.tags %}{% capture tag_name %}{{ tag }}{% endcapture %}
+    <a class="post-tag" href="/tag/{{ tag_name }}"><nobr>{{ tag_name }}</nobr></a>
+    {% endfor %}
+  </div>
+
   <div class="entry">
     {{ content }}
   </div>
-
-  <div class="date">
-    Posted on {{ page.date | date: "%B %e, %Y" }}
-  </div>
-
-  <span>[
-    {% for tag in page.tags %}
-      {% capture tag_name %}{{ tag }}{% endcapture %}
-      <a href="/tag/{{ tag_name }}"><code class="highligher-rouge"><nobr>{{ tag_name }}</nobr></code>&nbsp;</a>
-    {% endfor %}
-  ]</span>
-
+  <i>~fin~</i>
+  <hr>
   {% include disqus.html %}
 </article>
