--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -1,5 +1,5 @@
 
-.highlight {
+pre.highlight {
   background-color: #efefef;
   padding: 7px 7px 7px 10px;
   border: 1px solid #ddd;
@@ -7,11 +7,29 @@
   -webkit-box-shadow: 3px 3px rgba(0,0,0,0.1);
   box-shadow: 3px 3px rgba(0,0,0,0.1);
   margin: 20px 0 20px 0;
-  overflow: scroll;
+  overflow: auto;
+  word-wrap: normal;
+  white-space: pre;
 }
 
 code {
-  font-family:'Bitstream Vera Sans Mono','Courier', monospace;
+  font-family: 'Fira Code', 'Bitstream Vera Sans Mono','Courier', monospace;
+  font-size: 14px;
+  line-height: 0.5;
+}
+
+.btn-copy-code {
+  color: #586E75;
+  padding-right: 5px;
+  float: right;
+  background: #DC322F;
+  border: 0;
+  font-size: 12px;
+  margin-top: -30px;
+  &:hover {
+    cursor: pointer;
+    color: #ddd;
+  }
 }
 
 .highlight .c { color: #586E75 } /* Comment */
