--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,5 +54,8 @@
     </div>
 
     {% include analytics.html %}
+    <script src="/js/jquery.min.js"></script>
+    {% include cookie-consent.html %}
+
   </body>
 </html>
