--- a/_includes/cookie-consent.html
+++ b/_includes/cookie-consent.html
@@ -33,7 +33,7 @@
 
     if(readCookie('cookie-notice-dismissed')=='true') {
         {% include ga.js %}
-        {% include chatbutton.js %}
+        // {% include chatbutton.js %}
     } else {
         $('#cookie-notice').show();
     }
