--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,6 +1,6 @@
 {% if site.google_analytics %}
 	<!-- Google Analytics -->
-	<script>
+	<!-- <script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -11,6 +11,19 @@
 		  'page': '{{ site.baseurl }}{{ page.url }}',
 		  'title': '{{ page.title | replace: "'", "\\'" }}'
 		});
+	</script> -->
+	<script>
+		var _gaq = _gaq || [];
+		_gaq.push(['_setAccount', '{{ site.google_analytics }}']);
+		_gaq.push(['_gat._forceSSL']);
+		_gaq.push(['_gat._anonymizeIp']);
+		_gaq.push(['_trackPageview']);
+	  
+		(function() {
+		  var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		  ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+		  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+		})();
 	</script>
 	<!-- End Google Analytics -->
 {% endif %}
