add privacy policy, cleanup posts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,6 +49,9 @@
       <div class="container">
         <footer class="footer">
           {% include svg-icons.html %}
+          <div class="footer-links">
+            <a aria-label="Privacy" href="{{ site.baseurl }}/privacy">Privacy Policy</a>
+          </div>
         </footer>
       </div>
     </div>
