--- a/style.scss
+++ b/style.scss
@@ -427,6 +427,10 @@ nav {
   background-color: $lightGray;
 }
 
+.footer-links {
+  font-size: 10px;
+}
+
 footer {
   padding: 20px 0;
   text-align: center;
