--- a/style.scss
+++ b/style.scss
@@ -106,6 +106,11 @@ strong, b {
   font-weight: bold;
 }
 
+sup {
+  font-size: x-small; 
+  vertical-align: super;
+}
+
 img {
   max-width: 100%;
 }
