add share links/buttons

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,6 +16,9 @@ layout: default
     {{ content }}
   </div>
   <i>~fin~</i>
+  <div class="share-buttons">
+    {% include share-buttons.html %}
+  </div>
   <hr>
   {% include disqus.html %}
 </article>
