--- a/style.scss
+++ b/style.scss
@@ -126,6 +126,14 @@ iframe {
   margin: auto;
 }
 
+.share-buttons {
+  font-size: smaller;
+  vertical-align: bottom;
+  text-align: right;
+  // width: 50%;
+  // background-color: rgba(106,159,181,0.15);
+}
+
 .blkimg {
   display: block;
 }
