--- a/_includes/share-buttons.html
+++ b/_includes/share-buttons.html
@@ -8,7 +8,7 @@
 #share-buttons {display: inline-block; vertical-align: middle; }
 #share-buttons:after {content: ""; display: block; clear: both;}
 #share-buttons > div {
-    position: relative;
+    position: static;
     text-align: left; 
     height: 36px; 
     width: 32px; 
