--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,14 @@
         document.documentElement.setAttribute('data-theme', 'dark');
       }
     </script>
-    <!-- <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title> -->
+
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-54XNM86');</script>
+    <!-- End Google Tag Manager -->
 
     {% include meta.html %}
     {% seo %}
@@ -31,6 +38,10 @@
   </head>
 
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-54XNM86"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div class="wrapper-masthead">
       <div class="mode-switcher">
         <button id="theme-toggle" onclick="modeSwitcher()" class="theme-switcher"></button>
@@ -67,7 +78,6 @@
       </div>
     </div>
 
-    {% include analytics.html %}
     <script src="/js/jquery.min.js"></script>
     {% include cookie-consent.html %}
     <script>
